Update Spark setup guides for PySpark 4.x with uv
- Windows: JDK 17 (Adoptium), PySpark via uv, no separate Spark/Hadoop
- Linux: add test script
- MacOS: simplify to Java + PySpark via uv, add test script
- Remove pyspark.md (each platform guide is now self-contained)