@@ -1,25 +1,29 @@
 ## Windows
 
-Here we'll show you how to install Spark 3.3.2 for Windows.
-We tested it on Windows 10 and 11 Home edition, but it should work
-for other versions distros as well
+Here we'll show you how to install Spark 4.x for Windows.
+We tested it on Windows 10 and 11, but it should work
+for other versions as well.
 
-In this tutorial, we'll use [MINGW](https://www.mingw-w64.org/)/[Gitbash](https://gitforwindows.org/) for command line
+In this tutorial, we'll use [MINGW](https://www.mingw-w64.org/)/[Git Bash](https://gitforwindows.org/) for the command line.
 
-If you use WSL, follow the instructions from [linux.md](linux.md) 
+If you use WSL, follow the instructions from [linux.md](linux.md).
 
 
 ### Installing Java
 
-Spark needs Java 11. Download it from here: [https://www.oracle.com/de/java/technologies/javase/jdk11-archive-downloads.html](https://www.oracle.com/de/java/technologies/javase/jdk11-archive-downloads.html). Select “Windows x64 Compressed Archive” (you may have to create an oracle account for that)
-
-Unpack it to a folder with no space in the path. We use `C:/tools` - so the full path to JDK is `/c/tools/jdk-11.0.13`
-
-
-Now let’s configure it and add it to `PATH`:
+Spark 4.x requires Java 17. Download and unpack the Adoptium JDK 17:
 
 ```bash
-export JAVA_HOME="/c/tools/jdk-11.0.13"
+wget https://github.com/adoptium/temurin17-binaries/releases/download/jdk-17.0.18%2B8/OpenJDK17U-jdk_x64_windows_hotspot_17.0.18_8.zip
+unzip OpenJDK17U-jdk_x64_windows_hotspot_17.0.18_8.zip -d /c/tools/
+```
+
+The full path to JDK will be `/c/tools/jdk-17.0.18+8`.
+
+Now let's configure it and add it to `PATH` (add to your `.bashrc`):
+
+```bash
+export JAVA_HOME="/c/tools/jdk-17.0.18+8"
 export PATH="${JAVA_HOME}/bin:${PATH}"
 ```
 
@@ -32,109 +36,66 @@ java --version
 Output:
 
 ```
-java 11.0.13 2021-10-19 LTS
-Java(TM) SE Runtime Environment 18.9 (build 11.0.13+10-LTS-370)
-Java HotSpot(TM) 64-Bit Server VM 18.9 (build 11.0.13+10-LTS-370, mixed mode)
+openjdk 17.0.18 2026-01-20 LTS
+OpenJDK Runtime Environment Temurin-17.0.18+8 (build 17.0.18+8-LTS)
+OpenJDK 64-Bit Server VM Temurin-17.0.18+8 (build 17.0.18+8-LTS, mixed mode, sharing)
 ```
 
-### Hadoop
-
-Next, we need to have Hadoop binaries. 
-
-We'll need Hadoop 3.2 which we'll get from [here](https://github.com/cdarlint/winutils/tree/master/hadoop-3.2.0).
-
-Create a folder (`/c/tools/hadoop-3.2.0`) and put the files there 
-
-```bash
-HADOOP_VERSION="3.2.0"
-PREFIX="https://raw.githubusercontent.com/cdarlint/winutils/master/hadoop-${HADOOP_VERSION}/bin/"
-
-FILES="hadoop.dll hadoop.exp hadoop.lib hadoop.pdb libwinutils.lib winutils.exe winutils.pdb"
-
-for FILE in ${FILES}; do
-  wget "${PREFIX}/${FILE}"
-done
-```
-
-If you don't have wget, you can use curl:
-
-```bash
-HADOOP_VERSION="3.2.0"
-PREFIX="https://raw.githubusercontent.com/cdarlint/winutils/master/hadoop-${HADOOP_VERSION}/bin/"
-
-FILES="hadoop.dll hadoop.exp hadoop.lib hadoop.pdb libwinutils.lib winutils.exe winutils.pdb"
-
-for FILE in ${FILES}; do
-  curl -o "${FILE}" "${PREFIX}/${FILE}";
-done
-```
-
-Add it to `PATH`:
-
-```bash
-export HADOOP_HOME="/c/tools/hadoop-3.2.0"
-export PATH="${HADOOP_HOME}/bin:${PATH}"
-```
-
-### Spark
-
-Now download Spark. Select version 3.3.2 
-
-```bash
-wget https://archive.apache.org/dist/spark/spark-3.3.2/spark-3.3.2-bin-hadoop3.tgz
-```
-
-
-Unpack it in some location without spaces, e.g. `c:/tools/`: 
-
-```bash
-tar xzfv spark-3.3.2-bin-hadoop3.tgz
-```
-
-Let's also add it to `PATH`:
-
-```bash
-export SPARK_HOME="/c/tools/spark-3.3.2-bin-hadoop3"
-export PATH="${SPARK_HOME}/bin:${PATH}"
-```
-
-### Testing it
-
-Go to this directory
-
-```bash
-cd spark-3.3.2-bin-hadoop3
-```
-
-And run spark-shell:
-
-```bash
-./bin/spark-shell.cmd
-```
-
-At this point you may get a message from windows firewall — allow it.
-
-
-There could be some warnings (like this):
-
-```
-WARNING: An illegal reflective access operation has occurred
-WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/C:/tools/spark-3.3.2-bin-hadoop3/jars/spark-unsafe_2.12-3.3.2.jar) to constructor java.nio.DirectByteBuffer(long,int)
-WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform
-WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
-WARNING: All illegal access operations will be denied in a future release
-```
-
-You can safely ignore them.
-
-Now let's run this:
-
-```
-val data = 1 to 10000
-val distData = sc.parallelize(data)
-distData.filter(_ < 10).collect()
-```
 
 ### PySpark
 
-It's the same for all platforms. Go to [pyspark.md](pyspark.md). 
+We recommend using [uv](https://docs.astral.sh/uv/) for managing Python packages:
+
+```bash
+uv init
+uv add pyspark
+```
+
+Then run your scripts with `uv run`:
+
+```bash
+uv run python your_script.py
+```
+
+Alternatively, you can use pip:
+
+```bash
+pip install pyspark
+```
+
+Both approaches install PySpark along with a bundled Spark distribution — no separate Spark or Hadoop download needed.
+
+> If you previously installed Spark 3.x and have `SPARK_HOME` set in your `.bashrc` (e.g. pointing to `C:/tools/spark-3.3.2-bin-hadoop3`), remove that line. PySpark 4.x bundles its own Spark, so `SPARK_HOME` is no longer needed. If the old `SPARK_HOME` is still set, PySpark 4.x will load the old JARs and fail.
+
+
+### Testing it
+
+Create a test script `test_spark.py`:
+
+```python
+import pyspark
+from pyspark.sql import SparkSession
+
+spark = SparkSession.builder \
+    .master("local[*]") \
+    .appName('test') \
+    .getOrCreate()
+
+print(f"Spark version: {spark.version}")
+
+df = spark.range(10)
+df.show()
+
+spark.stop()
+```
+
+Run it:
+
+```bash
+uv run python test_spark.py
+```
+
+At this point you may get a message from Windows Firewall — allow it.
+
+You may see a warning like `WARNING: Using incubator modules: jdk.incubator.vector` — you can safely ignore it.
+
